HEAD
    + Now comm/gateway config is passed to the tests as COMM_gateway
    + Added master configuration key to set the IP of the master
    + Added finalConfigurations method to ANSTE::Image::Commands
    + Added ANSTE::Virtualizer::OpenStack with partial support
    + Added useOpenStack and setUseOpenStack to Anste::Status
    + Added virtualizerStatus and setVirtualizerStatus to Anste::Status
    + Fix input read when asking for a character
    + Added ANSTE::Util::readChar method that reads a character and ignores
      the remaining characters in the line
    + Check for duplicated tests on a suite
    + Exit code is now != 0 if any test has failed
    + Print timestamps with each line in verbose mode
    + Fixed default path for chromedriver binary
    + Now config and cli vars are passed to the tests with the GLOBAL_ prefix
0.11
    + Added anste-init command to create the directory structure of a project
    + Added python-anste wrapper for python-selenium
    + Remove old Selenium 1.0 support
    + Remove deprecated Xen stuff
    + Remove support for deprecated XML format
    + Proper use of upstart instead of /etc/init.d for networking and dhcp
    + Use File::Slurp instead of Perl6::Slurp
    + Run tests in /var/tmp/anste-tests with a run.sh wrapper
    + Show test log on failures when verbose mode is enabled
    + Made VMs from host with raw base images permanent
    + Skip some actions in the deploy for hosts with raw base images
    + Added support for image removal using the image name
    + Added 'baseImage-type' attribute to hosts
    + Now test suites refer directly to test scripts instead of dirs
    + Added getimg command line option to trigger the download of an image
    + Renamed command line option from create to createimg
    + Added image-repo conf key to set the place where to download images from
    + Change auto-create-images conf key for image-missing-action, that allows
      auto-create and auto-download as values