@@ -1,5 +1,6 @@
 HEAD
-    + Now comm/gateway config is passed to the tests as COMM_gateway
+    + Now the gateway and the first address from the config are passed
+      to the tests as COMM_gateway and COMM_firstAddress
     + Added master configuration key to set the IP of the master
     + Added finalConfigurations method to ANSTE::Image::Commands
     + Added ANSTE::Virtualizer::OpenStack with partial support
